--- a/lobby.html
+++ b/lobby.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Boxy Run | Multiplayer Lobby</title>
+    <title>History Sufers | Multiplayer Lobby</title>
     <link
       href="https://cdn.jsdelivr.net/npm/daisyui@5"
       rel="stylesheet"
@@ -73,7 +73,7 @@
           href="index.html"
           class="btn btn-ghost normal-case text-xl font-display"
         >
-          ← Boxy Run
+          ← History Sufers
         </a>
       </div>
       <div class="flex-none">
