--- a/display.html
+++ b/display.html
@@ -1,18 +1,21 @@
 <html>
-	<head>
-		<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700" rel="stylesheet">
-		<script type="text/javascript" src="js/three.min.js"></script>
-        <script type="text/javascript" src="js/display.js"></script>
-		<link href="style.css" rel="stylesheet">
-	</head>
-	<body>
-		<div class="panel">
-			<h1>
-				<span class="title">Boxy Run</span>
-				<span class="byline">Marathon of Madness</span>
-			</h1>
-			<p class="instructions">Use arrow keys to move.</p>
-		</div>
-		<div id="world"></div>
-	</body>
+  <head>
+    <link
+      href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700"
+      rel="stylesheet"
+    />
+    <script type="text/javascript" src="js/three.min.js"></script>
+    <script type="text/javascript" src="js/display.js"></script>
+    <link href="style.css" rel="stylesheet" />
+  </head>
+  <body>
+    <div class="panel">
+      <h1>
+        <span class="title">History Sufers</span>
+        <span class="byline">Marathon of Madness</span>
+      </h1>
+      <p class="instructions">Use arrow keys to move.</p>
+    </div>
+    <div id="world"></div>
+  </body>
 </html>
