--- a/multiplayer.html
+++ b/multiplayer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Boxy Run | Multiplayer Race</title>
+    <title>History Sufers | Multiplayer Race</title>
     <link
       href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700"
       rel="stylesheet"
