--- a/singleplayer.html
+++ b/singleplayer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Boxy Run | Single Player</title>
+    <title>History Sufers | Single Player</title>
     <link
       href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700"
       rel="stylesheet"
