--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
       type="text/css"
     />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700;900&family=Inter:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
@@ -209,13 +208,8 @@
           <h1
             class="font-display text-7xl font-black mb-4 text-white drop-shadow-lg animate-pulse-slow"
           >
-            BOXY RUN
+            HISTORY SUFERS
           </h1>
-          <p
-            class="font-sans text-xl font-light tracking-widest uppercase text-purple-100"
-          >
-            Temple Run Inspired Racing
-          </p>
         </div>
 
         <!-- Menu Buttons -->
@@ -238,7 +232,7 @@
                   d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
                 />
               </svg>
-              <span class="text-2xl tracking-wider">SINGLE PLAYER</span>
+              <span class="text-2xl tracking-wider">CHƠI ĐƠN</span>
             </div>
           </button>
 
@@ -260,7 +254,7 @@
                   d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z"
                 />
               </svg>
-              <span class="text-2xl tracking-wider">MULTIPLAYER RACE</span>
+              <span class="text-2xl tracking-wider">NHIỀU NGƯỜI CHƠI</span>
               <span
                 class="absolute top-2 right-4 bg-yellow-400 text-red-900 text-xs font-black px-3 py-1 rounded-full animate-bounce"
                 >NEW!</span
@@ -268,7 +262,7 @@
             </div>
           </button>
 
-          <button
+          <!-- <button
             onclick="showInstructions()"
             class="w-full btn-glow bg-gradient-to-r from-green-500 to-teal-600 hover:from-green-600 hover:to-teal-700 text-white font-bold py-5 px-8 rounded-2xl transition-all duration-300 transform hover:scale-105 focus:outline-none focus:ring-4 focus:ring-green-300"
           >
@@ -288,11 +282,11 @@
               </svg>
               <span class="text-xl tracking-wider">HOW TO PLAY</span>
             </div>
-          </button>
+          </button> -->
         </div>
 
         <!-- Footer -->
-        <div class="text-center text-purple-100 space-y-2">
+        <!-- <div class="text-center text-purple-100 space-y-2">
           <p class="text-sm font-light">
             Original by
             <a
@@ -302,15 +296,12 @@
               >lcaohoanq</a
             >
           </p>
-          <p class="text-xs opacity-75">
-            Enhanced with Multiplayer Racing & Modern UI
-          </p>
-        </div>
+        </div> -->
       </div>
     </div>
 
     <!-- Instructions Modal -->
-    <div
+    <!-- <div
       id="instructionsModal"
       class="hidden fixed inset-0 bg-black bg-opacity-75 flex items-center justify-center p-4 z-50"
     >
@@ -434,7 +425,7 @@
           Got it!
         </button>
       </div>
-    </div>
+    </div> -->
 
     <script>
       function showInstructions() {
