--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -34,26 +34,11 @@
 
     <!-- Food Pellets -->
     <div class="pellet" style="top: 15%; left: 10%; animation-delay: 0s"></div>
-    <div
-      class="pellet"
-      style="top: 25%; right: 15%; animation-delay: 0.5s"
-    ></div>
-    <div
-      class="pellet"
-      style="bottom: 20%; left: 20%; animation-delay: 1s"
-    ></div>
-    <div
-      class="pellet"
-      style="top: 60%; right: 25%; animation-delay: 1.5s"
-    ></div>
-    <div
-      class="pellet"
-      style="bottom: 30%; right: 10%; animation-delay: 2s"
-    ></div>
-    <div
-      class="pellet"
-      style="top: 40%; left: 15%; animation-delay: 0.7s"
-    ></div>
+    <div class="pellet" style="top: 25%; right: 15%; animation-delay: 0.5s"></div>
+    <div class="pellet" style="bottom: 20%; left: 20%; animation-delay: 1s"></div>
+    <div class="pellet" style="top: 60%; right: 25%; animation-delay: 1.5s"></div>
+    <div class="pellet" style="bottom: 30%; right: 10%; animation-delay: 2s"></div>
+    <div class="pellet" style="top: 40%; left: 15%; animation-delay: 0.7s"></div>
 
     <!-- Main Container -->
     <div class="container">
@@ -63,16 +48,9 @@
       </div>
 
       <div class="menu-buttons">
-        <button
-          onclick="window.location.href='singleplayer.html'"
-          class="menu-btn btn-primary"
-        >
+        <button onclick="window.location.href='singleplayer.html'" class="menu-btn btn-primary">
           <div class="btn-content">
-            <svg
-              class="btn-icon"
-              viewBox="0 0 24 24"
-              xmlns="http://www.w3.org/2000/svg"
-            >
+            <svg class="btn-icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
               />
@@ -81,17 +59,10 @@
           </div>
         </button>
 
-        <button
-          onclick="window.location.href='lobby.html'"
-          class="menu-btn btn-secondary"
-        >
+        <button onclick="window.location.href='lobby.html'" class="menu-btn btn-secondary">
           <span class="new-badge">NEW!</span>
           <div class="btn-content">
-            <svg
-              class="btn-icon"
-              viewBox="0 0 24 24"
-              xmlns="http://www.w3.org/2000/svg"
-            >
+            <svg class="btn-icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
               />
@@ -104,19 +75,19 @@
 
     <script>
       // Add subtle floating animation to pellets
-      const pellets = document.querySelectorAll(".pellet");
+      const pellets = document.querySelectorAll('.pellet');
       pellets.forEach((pellet, index) => {
         const randomX = Math.random() * 20 - 10;
         const randomY = Math.random() * 20 - 10;
         const randomDuration = 3 + Math.random() * 2;
 
         pellet.style.animation += `, floatPellet ${randomDuration}s infinite ease-in-out`;
-        pellet.style.setProperty("--x", randomX + "px");
-        pellet.style.setProperty("--y", randomY + "px");
+        pellet.style.setProperty('--x', randomX + 'px');
+        pellet.style.setProperty('--y', randomY + 'px');
       });
 
       // Add floating animation
-      const style = document.createElement("style");
+      const style = document.createElement('style');
       style.textContent = `
         @keyframes floatPellet {
           0%, 100% { transform: translate(0, 0); }
