--- a/singleplayer.html
+++ b/singleplayer.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <title>History Sufers | Single Player</title>
@@ -39,13 +39,9 @@
         </tr>
       </table>
       <table id="ranks"></table>
-      <div class="animate-flicker" id="variable-content">
-        Press any button to begin
-      </div>
+      <div class="animate-flicker" id="variable-content">Press any button to begin</div>
       <div style="margin-top: 2em; text-align: center">
-        <a
-          href="index.html"
-          style="color: #333; text-decoration: none; font-size: 0.9em"
+        <a href="index.html" style="color: #333; text-decoration: none; font-size: 0.9em"
           >← Back to Menu</a
         >
       </div>
