--- a/multiplayer.html
+++ b/multiplayer.html
@@ -10,10 +10,46 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="js/three.min.js"></script>
+    <script type="text/javascript" src="js/audio-manager.js"></script>
     <script type="text/javascript" src="js/network.js"></script>
     <script type="text/javascript" src="js/game-multiplayer.js"></script>
     <link href="style.css" rel="stylesheet" />
     <style>
+      /* Sound Toggle Button */
+      .sound-toggle {
+        position: absolute;
+        top: 20px;
+        left: 20px;
+        width: 50px;
+        height: 50px;
+        background: rgba(255, 255, 255, 0.9);
+        border: 2px solid #333;
+        border-radius: 50%;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 24px;
+        transition: all 0.3s ease;
+        z-index: 1000;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      }
+
+      .sound-toggle:hover {
+        background: #fff;
+        transform: scale(1.1);
+        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+      }
+
+      .sound-toggle:active {
+        transform: scale(0.95);
+      }
+
+      .sound-toggle.muted {
+        background: rgba(255, 100, 100, 0.9);
+        border-color: #cc0000;
+      }
+
       .multiplayer-hud {
         position: absolute;
         top: 1em;
@@ -101,6 +137,11 @@
     </style>
   </head>
   <body>
+    <!-- Sound Toggle Button -->
+    <button id="sound-toggle" class="sound-toggle" title="Toggle Sound">
+      🔊
+    </button>
+
     <div class="panel">
       <div class="game-title">
         <div class="title">boxy run</div>
