feat: replace tree object

--- a/multiplayer.html
+++ b/multiplayer.html
@@ -6,6 +6,7 @@
       href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700"
       rel="stylesheet"
     />
+     <link rel="icon" type="image/svg+xml" href="/assets/favicon.ico" />
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <script src="/socket.io/socket.io.js"></script>
