--- a/singleplayer-old.html
+++ b/singleplayer-old.html
@@ -2,16 +2,13 @@
 <html>
   <head>
     <title>History Sufers | Single Player</title>
-     <link rel="icon" type="image/svg+xml" href="/assets/favicon.ico" />
     <link
       href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700"
       rel="stylesheet"
     />
     <script type="text/javascript" src="js/three.min.js"></script>
     <script type="text/javascript" src="js/audio-manager.js"></script>
-    <script type="text/javascript" src="js/helpers.js"></script>
-    <script type="text/javascript" src="js/object.js"></script>
-    <script type="text/javascript" src="js/game.js"></script>
+    <script type="text/javascript" src="js/game-old.js"></script>
     <link href="style.css" rel="stylesheet" />
     <style>
       /* Sound Toggle Button */
